src/cset.output
Terminals unused in grammar

   DIGIT


State 143 conflicts: 1 shift/reduce


Grammar

    0 $accept: outset $end

    1 outset: function
    2       | outset function

    3 function: type ID '(' arglist ')' compoundstmt

    4 arglist: arg
    5        | arglist ',' arg

    6 arg: type ID

    7 compoundstmt: '{' stmtlist '}'

    8 type: INT
    9     | FLOAT
   10     | CHAR
   11     | BOOL
   12     | SET "<<" type ">>"
   13     | PAIR "<<" type ',' type ">>"

   14 stmtlist: stmtlist stmt
   15         | stmt

   16 stmt: whilestmt
   17     | expr ';'
   18     | ifstmt
   19     | compoundstmt
   20     | declaration ';'
   21     | io ';'
   22     | returnstmt ';'

   23 whilestmt: WHILE '(' expr ')' stmt

   24 ifstmt: IF '(' expr ')' stmt elsepart

   25 elsepart: ELSE stmt
   26         | %empty

   27 declaration: type identlist
   28            | type attr

   29 io: PRINT '(' STR ')'
   30   | PRINT '(' ID ')'
   31   | READ '(' ID ')'

   32 returnstmt: RETURN expr
   33           | RETURN

   34 expr: attr
   35     | rvalue
   36     | funccall

   37 attr: ID '=' expr

   38 identlist: ID ',' identlist
   39          | ID

   40 rvalue: rvalue compare logicalor
   41       | logicalor

   42 compare: "=="
   43        | "<"
   44        | ">"
   45        | "<="
   46        | ">="
   47        | "!="

   48 logicalor: logicaland OR logicalor
   49          | logicaland

   50 logicaland: pertinence "&&" logicaland
   51           | pertinence

   52 pertinence: pertinence "<?>" cartesian
   53           | cartesian

   54 cartesian: cartesian "<*>" addition
   55          | addition

   56 addition: addition "+" multiplication
   57         | addition "-" multiplication
   58         | multiplication

   59 multiplication: multiplication "*" term
   60               | multiplication "/" term
   61               | term

   62 term: '(' expr ')'
   63     | '-' term
   64     | '+' term
   65     | '$' term
   66     | '!' term
   67     | '{' factorlist '}'
   68     | '(' pair ')'
   69     | factor

   70 factor: ID
   71       | BOOL_VALUE
   72       | NUM_VALUE
   73       | CHAR_VALUE

   74 factorlist: factorlist ',' factor
   75           | factor
   76           | %empty

   77 pair: factor ',' factor

   78 funccall: ID '(' identlist ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 66
'$' (36) 65
'(' (40) 3 23 24 29 30 31 62 68 78
')' (41) 3 23 24 29 30 31 62 68 78
'+' (43) 64
',' (44) 5 13 38 74 77
'-' (45) 63
';' (59) 17 20 21 22
'=' (61) 37
'{' (123) 7 67
'}' (125) 7 67
error (256)
DIGIT (258)
STR (259) 29
ID (260) 3 6 30 31 37 38 39 70 78
INT (261) 8
FLOAT (262) 9
CHAR (263) 10
BOOL (264) 11
SET (265) 12
PAIR (266) 13
WHILE (267) 23
IF (268) 24
ELSE (269) 25
PRINT (270) 29 30
READ (271) 31
RETURN (272) 32 33
BOOL_VALUE (273) 71
NUM_VALUE (274) 72
CHAR_VALUE (275) 73
OR (276) 48
"<<" (277) 12 13
">>" (278) 12 13
"==" (279) 42
"<" (280) 43
">" (281) 44
"<=" (282) 45
">=" (283) 46
"!=" (284) 47
"&&" (285) 50
"<?>" (286) 52
"<*>" (287) 54
"+" (288) 56
"-" (289) 57
"*" (290) 59
"/" (291) 60


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
outset (49)
    on left: 1 2, on right: 0 2
function (50)
    on left: 3, on right: 1 2
arglist (51)
    on left: 4 5, on right: 3 5
arg (52)
    on left: 6, on right: 4 5
compoundstmt (53)
    on left: 7, on right: 3 19
type (54)
    on left: 8 9 10 11 12 13, on right: 3 6 12 13 27 28
stmtlist (55)
    on left: 14 15, on right: 7 14
stmt (56)
    on left: 16 17 18 19 20 21 22, on right: 14 15 23 24 25
whilestmt (57)
    on left: 23, on right: 16
ifstmt (58)
    on left: 24, on right: 18
elsepart (59)
    on left: 25 26, on right: 24
declaration (60)
    on left: 27 28, on right: 20
io (61)
    on left: 29 30 31, on right: 21
returnstmt (62)
    on left: 32 33, on right: 22
expr (63)
    on left: 34 35 36, on right: 17 23 24 32 37 62
attr (64)
    on left: 37, on right: 28 34
identlist (65)
    on left: 38 39, on right: 27 38 78
rvalue (66)
    on left: 40 41, on right: 35 40
compare (67)
    on left: 42 43 44 45 46 47, on right: 40
logicalor (68)
    on left: 48 49, on right: 40 41 48
logicaland (69)
    on left: 50 51, on right: 48 49 50
pertinence (70)
    on left: 52 53, on right: 50 51 52
cartesian (71)
    on left: 54 55, on right: 52 53 54
addition (72)
    on left: 56 57 58, on right: 54 55 56 57
multiplication (73)
    on left: 59 60 61, on right: 56 57 58 59 60
term (74)
    on left: 62 63 64 65 66 67 68 69, on right: 59 60 61 63 64 65 66
factor (75)
    on left: 70 71 72 73, on right: 69 74 75 77
factorlist (76)
    on left: 74 75 76, on right: 67 74
pair (77)
    on left: 77, on right: 68
funccall (78)
    on left: 78, on right: 36


State 0

    0 $accept: . outset $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    BOOL   shift, and go to state 4
    SET    shift, and go to state 5
    PAIR   shift, and go to state 6

    outset    go to state 7
    function  go to state 8
    type      go to state 9


State 1

    8 type: INT .

    $default  reduce using rule 8 (type)


State 2

    9 type: FLOAT .

    $default  reduce using rule 9 (type)


State 3

   10 type: CHAR .

    $default  reduce using rule 10 (type)


State 4

   11 type: BOOL .

    $default  reduce using rule 11 (type)


State 5

   12 type: SET . "<<" type ">>"

    "<<"  shift, and go to state 10


State 6

   13 type: PAIR . "<<" type ',' type ">>"

    "<<"  shift, and go to state 11


State 7

    0 $accept: outset . $end
    2 outset: outset . function

    $end   shift, and go to state 12
    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    BOOL   shift, and go to state 4
    SET    shift, and go to state 5
    PAIR   shift, and go to state 6

    function  go to state 13
    type      go to state 9


State 8

    1 outset: function .

    $default  reduce using rule 1 (outset)


State 9

    3 function: type . ID '(' arglist ')' compoundstmt

    ID  shift, and go to state 14


State 10

   12 type: SET "<<" . type ">>"

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    BOOL   shift, and go to state 4
    SET    shift, and go to state 5
    PAIR   shift, and go to state 6

    type  go to state 15


State 11

   13 type: PAIR "<<" . type ',' type ">>"

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    BOOL   shift, and go to state 4
    SET    shift, and go to state 5
    PAIR   shift, and go to state 6

    type  go to state 16


State 12

    0 $accept: outset $end .

    $default  accept


State 13

    2 outset: outset function .

    $default  reduce using rule 2 (outset)


State 14

    3 function: type ID . '(' arglist ')' compoundstmt

    '('  shift, and go to state 17


State 15

   12 type: SET "<<" type . ">>"

    ">>"  shift, and go to state 18


State 16

   13 type: PAIR "<<" type . ',' type ">>"

    ','  shift, and go to state 19


State 17

    3 function: type ID '(' . arglist ')' compoundstmt

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    BOOL   shift, and go to state 4
    SET    shift, and go to state 5
    PAIR   shift, and go to state 6

    arglist  go to state 20
    arg      go to state 21
    type     go to state 22


State 18

   12 type: SET "<<" type ">>" .

    $default  reduce using rule 12 (type)


State 19

   13 type: PAIR "<<" type ',' . type ">>"

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    BOOL   shift, and go to state 4
    SET    shift, and go to state 5
    PAIR   shift, and go to state 6

    type  go to state 23


State 20

    3 function: type ID '(' arglist . ')' compoundstmt
    5 arglist: arglist . ',' arg

    ')'  shift, and go to state 24
    ','  shift, and go to state 25


State 21

    4 arglist: arg .

    $default  reduce using rule 4 (arglist)


State 22

    6 arg: type . ID

    ID  shift, and go to state 26


State 23

   13 type: PAIR "<<" type ',' type . ">>"

    ">>"  shift, and go to state 27


State 24

    3 function: type ID '(' arglist ')' . compoundstmt

    '{'  shift, and go to state 28

    compoundstmt  go to state 29


State 25

    5 arglist: arglist ',' . arg

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    BOOL   shift, and go to state 4
    SET    shift, and go to state 5
    PAIR   shift, and go to state 6

    arg   go to state 30
    type  go to state 22


State 26

    6 arg: type ID .

    $default  reduce using rule 6 (arg)


State 27

   13 type: PAIR "<<" type ',' type ">>" .

    $default  reduce using rule 13 (type)


State 28

    7 compoundstmt: '{' . stmtlist '}'

    ID          shift, and go to state 31
    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    BOOL        shift, and go to state 4
    SET         shift, and go to state 5
    PAIR        shift, and go to state 6
    WHILE       shift, and go to state 32
    IF          shift, and go to state 33
    PRINT       shift, and go to state 34
    READ        shift, and go to state 35
    RETURN      shift, and go to state 36
    BOOL_VALUE  shift, and go to state 37
    NUM_VALUE   shift, and go to state 38
    CHAR_VALUE  shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 41
    '-'         shift, and go to state 42
    '+'         shift, and go to state 43
    '$'         shift, and go to state 44
    '!'         shift, and go to state 45

    compoundstmt    go to state 46
    type            go to state 47
    stmtlist        go to state 48
    stmt            go to state 49
    whilestmt       go to state 50
    ifstmt          go to state 51
    declaration     go to state 52
    io              go to state 53
    returnstmt      go to state 54
    expr            go to state 55
    attr            go to state 56
    rvalue          go to state 57
    logicalor       go to state 58
    logicaland      go to state 59
    pertinence      go to state 60
    cartesian       go to state 61
    addition        go to state 62
    multiplication  go to state 63
    term            go to state 64
    factor          go to state 65
    funccall        go to state 66


State 29

    3 function: type ID '(' arglist ')' compoundstmt .

    $default  reduce using rule 3 (function)


State 30

    5 arglist: arglist ',' arg .

    $default  reduce using rule 5 (arglist)


State 31

   37 attr: ID . '=' expr
   70 factor: ID .
   78 funccall: ID . '(' identlist ')'

    '('  shift, and go to state 67
    '='  shift, and go to state 68

    $default  reduce using rule 70 (factor)


State 32

   23 whilestmt: WHILE . '(' expr ')' stmt

    '('  shift, and go to state 69


State 33

   24 ifstmt: IF . '(' expr ')' stmt elsepart

    '('  shift, and go to state 70


State 34

   29 io: PRINT . '(' STR ')'
   30   | PRINT . '(' ID ')'

    '('  shift, and go to state 71


State 35

   31 io: READ . '(' ID ')'

    '('  shift, and go to state 72


State 36

   32 returnstmt: RETURN . expr
   33           | RETURN .

    ID          shift, and go to state 31
    BOOL_VALUE  shift, and go to state 37
    NUM_VALUE   shift, and go to state 38
    CHAR_VALUE  shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 73
    '-'         shift, and go to state 42
    '+'         shift, and go to state 43
    '$'         shift, and go to state 44
    '!'         shift, and go to state 45

    $default  reduce using rule 33 (returnstmt)

    expr            go to state 74
    attr            go to state 56
    rvalue          go to state 57
    logicalor       go to state 58
    logicaland      go to state 59
    pertinence      go to state 60
    cartesian       go to state 61
    addition        go to state 62
    multiplication  go to state 63
    term            go to state 64
    factor          go to state 65
    funccall        go to state 66


State 37

   71 factor: BOOL_VALUE .

    $default  reduce using rule 71 (factor)


State 38

   72 factor: NUM_VALUE .

    $default  reduce using rule 72 (factor)


State 39

   73 factor: CHAR_VALUE .

    $default  reduce using rule 73 (factor)


State 40

   62 term: '(' . expr ')'
   68     | '(' . pair ')'

    ID          shift, and go to state 31
    BOOL_VALUE  shift, and go to state 37
    NUM_VALUE   shift, and go to state 38
    CHAR_VALUE  shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 73
    '-'         shift, and go to state 42
    '+'         shift, and go to state 43
    '$'         shift, and go to state 44
    '!'         shift, and go to state 45

    expr            go to state 75
    attr            go to state 56
    rvalue          go to state 57
    logicalor       go to state 58
    logicaland      go to state 59
    pertinence      go to state 60
    cartesian       go to state 61
    addition        go to state 62
    multiplication  go to state 63
    term            go to state 64
    factor          go to state 76
    pair            go to state 77
    funccall        go to state 66


State 41

    7 compoundstmt: '{' . stmtlist '}'
   67 term: '{' . factorlist '}'

    ID          shift, and go to state 31
    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    BOOL        shift, and go to state 4
    SET         shift, and go to state 5
    PAIR        shift, and go to state 6
    WHILE       shift, and go to state 32
    IF          shift, and go to state 33
    PRINT       shift, and go to state 34
    READ        shift, and go to state 35
    RETURN      shift, and go to state 36
    BOOL_VALUE  shift, and go to state 37
    NUM_VALUE   shift, and go to state 38
    CHAR_VALUE  shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 41
    '-'         shift, and go to state 42
    '+'         shift, and go to state 43
    '$'         shift, and go to state 44
    '!'         shift, and go to state 45

    $default  reduce using rule 76 (factorlist)

    compoundstmt    go to state 46
    type            go to state 47
    stmtlist        go to state 48
    stmt            go to state 49
    whilestmt       go to state 50
    ifstmt          go to state 51
    declaration     go to state 52
    io              go to state 53
    returnstmt      go to state 54
    expr            go to state 55
    attr            go to state 56
    rvalue          go to state 57
    logicalor       go to state 58
    logicaland      go to state 59
    pertinence      go to state 60
    cartesian       go to state 61
    addition        go to state 62
    multiplication  go to state 63
    term            go to state 64
    factor          go to state 78
    factorlist      go to state 79
    funccall        go to state 66


State 42

   63 term: '-' . term

    ID          shift, and go to state 80
    BOOL_VALUE  shift, and go to state 37
    NUM_VALUE   shift, and go to state 38
    CHAR_VALUE  shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 73
    '-'         shift, and go to state 42
    '+'         shift, and go to state 43
    '$'         shift, and go to state 44
    '!'         shift, and go to state 45

    term    go to state 81
    factor  go to state 65


State 43

   64 term: '+' . term

    ID          shift, and go to state 80
    BOOL_VALUE  shift, and go to state 37
    NUM_VALUE   shift, and go to state 38
    CHAR_VALUE  shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 73
    '-'         shift, and go to state 42
    '+'         shift, and go to state 43
    '$'         shift, and go to state 44
    '!'         shift, and go to state 45

    term    go to state 82
    factor  go to state 65


State 44

   65 term: '$' . term

    ID          shift, and go to state 80
    BOOL_VALUE  shift, and go to state 37
    NUM_VALUE   shift, and go to state 38
    CHAR_VALUE  shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 73
    '-'         shift, and go to state 42
    '+'         shift, and go to state 43
    '$'         shift, and go to state 44
    '!'         shift, and go to state 45

    term    go to state 83
    factor  go to state 65


State 45

   66 term: '!' . term

    ID          shift, and go to state 80
    BOOL_VALUE  shift, and go to state 37
    NUM_VALUE   shift, and go to state 38
    CHAR_VALUE  shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 73
    '-'         shift, and go to state 42
    '+'         shift, and go to state 43
    '$'         shift, and go to state 44
    '!'         shift, and go to state 45

    term    go to state 84
    factor  go to state 65


State 46

   19 stmt: compoundstmt .

    $default  reduce using rule 19 (stmt)


State 47

   27 declaration: type . identlist
   28            | type . attr

    ID  shift, and go to state 85

    attr       go to state 86
    identlist  go to state 87


State 48

    7 compoundstmt: '{' stmtlist . '}'
   14 stmtlist: stmtlist . stmt

    ID          shift, and go to state 31
    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    BOOL        shift, and go to state 4
    SET         shift, and go to state 5
    PAIR        shift, and go to state 6
    WHILE       shift, and go to state 32
    IF          shift, and go to state 33
    PRINT       shift, and go to state 34
    READ        shift, and go to state 35
    RETURN      shift, and go to state 36
    BOOL_VALUE  shift, and go to state 37
    NUM_VALUE   shift, and go to state 38
    CHAR_VALUE  shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 41
    '}'         shift, and go to state 88
    '-'         shift, and go to state 42
    '+'         shift, and go to state 43
    '$'         shift, and go to state 44
    '!'         shift, and go to state 45

    compoundstmt    go to state 46
    type            go to state 47
    stmt            go to state 89
    whilestmt       go to state 50
    ifstmt          go to state 51
    declaration     go to state 52
    io              go to state 53
    returnstmt      go to state 54
    expr            go to state 55
    attr            go to state 56
    rvalue          go to state 57
    logicalor       go to state 58
    logicaland      go to state 59
    pertinence      go to state 60
    cartesian       go to state 61
    addition        go to state 62
    multiplication  go to state 63
    term            go to state 64
    factor          go to state 65
    funccall        go to state 66


State 49

   15 stmtlist: stmt .

    $default  reduce using rule 15 (stmtlist)


State 50

   16 stmt: whilestmt .

    $default  reduce using rule 16 (stmt)


State 51

   18 stmt: ifstmt .

    $default  reduce using rule 18 (stmt)


State 52

   20 stmt: declaration . ';'

    ';'  shift, and go to state 90


State 53

   21 stmt: io . ';'

    ';'  shift, and go to state 91


State 54

   22 stmt: returnstmt . ';'

    ';'  shift, and go to state 92


State 55

   17 stmt: expr . ';'

    ';'  shift, and go to state 93


State 56

   34 expr: attr .

    $default  reduce using rule 34 (expr)


State 57

   35 expr: rvalue .
   40 rvalue: rvalue . compare logicalor

    "=="  shift, and go to state 94
    "<"   shift, and go to state 95
    ">"   shift, and go to state 96
    "<="  shift, and go to state 97
    ">="  shift, and go to state 98
    "!="  shift, and go to state 99

    $default  reduce using rule 35 (expr)

    compare  go to state 100


State 58

   41 rvalue: logicalor .

    $default  reduce using rule 41 (rvalue)


State 59

   48 logicalor: logicaland . OR logicalor
   49          | logicaland .

    OR  shift, and go to state 101

    $default  reduce using rule 49 (logicalor)


State 60

   50 logicaland: pertinence . "&&" logicaland
   51           | pertinence .
   52 pertinence: pertinence . "<?>" cartesian

    "&&"   shift, and go to state 102
    "<?>"  shift, and go to state 103

    $default  reduce using rule 51 (logicaland)


State 61

   53 pertinence: cartesian .
   54 cartesian: cartesian . "<*>" addition

    "<*>"  shift, and go to state 104

    $default  reduce using rule 53 (pertinence)


State 62

   55 cartesian: addition .
   56 addition: addition . "+" multiplication
   57         | addition . "-" multiplication

    "+"  shift, and go to state 105
    "-"  shift, and go to state 106

    $default  reduce using rule 55 (cartesian)


State 63

   58 addition: multiplication .
   59 multiplication: multiplication . "*" term
   60               | multiplication . "/" term

    "*"  shift, and go to state 107
    "/"  shift, and go to state 108

    $default  reduce using rule 58 (addition)


State 64

   61 multiplication: term .

    $default  reduce using rule 61 (multiplication)


State 65

   69 term: factor .

    $default  reduce using rule 69 (term)


State 66

   36 expr: funccall .

    $default  reduce using rule 36 (expr)


State 67

   78 funccall: ID '(' . identlist ')'

    ID  shift, and go to state 109

    identlist  go to state 110


State 68

   37 attr: ID '=' . expr

    ID          shift, and go to state 31
    BOOL_VALUE  shift, and go to state 37
    NUM_VALUE   shift, and go to state 38
    CHAR_VALUE  shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 73
    '-'         shift, and go to state 42
    '+'         shift, and go to state 43
    '$'         shift, and go to state 44
    '!'         shift, and go to state 45

    expr            go to state 111
    attr            go to state 56
    rvalue          go to state 57
    logicalor       go to state 58
    logicaland      go to state 59
    pertinence      go to state 60
    cartesian       go to state 61
    addition        go to state 62
    multiplication  go to state 63
    term            go to state 64
    factor          go to state 65
    funccall        go to state 66


State 69

   23 whilestmt: WHILE '(' . expr ')' stmt

    ID          shift, and go to state 31
    BOOL_VALUE  shift, and go to state 37
    NUM_VALUE   shift, and go to state 38
    CHAR_VALUE  shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 73
    '-'         shift, and go to state 42
    '+'         shift, and go to state 43
    '$'         shift, and go to state 44
    '!'         shift, and go to state 45

    expr            go to state 112
    attr            go to state 56
    rvalue          go to state 57
    logicalor       go to state 58
    logicaland      go to state 59
    pertinence      go to state 60
    cartesian       go to state 61
    addition        go to state 62
    multiplication  go to state 63
    term            go to state 64
    factor          go to state 65
    funccall        go to state 66


State 70

   24 ifstmt: IF '(' . expr ')' stmt elsepart

    ID          shift, and go to state 31
    BOOL_VALUE  shift, and go to state 37
    NUM_VALUE   shift, and go to state 38
    CHAR_VALUE  shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 73
    '-'         shift, and go to state 42
    '+'         shift, and go to state 43
    '$'         shift, and go to state 44
    '!'         shift, and go to state 45

    expr            go to state 113
    attr            go to state 56
    rvalue          go to state 57
    logicalor       go to state 58
    logicaland      go to state 59
    pertinence      go to state 60
    cartesian       go to state 61
    addition        go to state 62
    multiplication  go to state 63
    term            go to state 64
    factor          go to state 65
    funccall        go to state 66


State 71

   29 io: PRINT '(' . STR ')'
   30   | PRINT '(' . ID ')'

    STR  shift, and go to state 114
    ID   shift, and go to state 115


State 72

   31 io: READ '(' . ID ')'

    ID  shift, and go to state 116


State 73

   67 term: '{' . factorlist '}'

    ID          shift, and go to state 80
    BOOL_VALUE  shift, and go to state 37
    NUM_VALUE   shift, and go to state 38
    CHAR_VALUE  shift, and go to state 39

    $default  reduce using rule 76 (factorlist)

    factor      go to state 117
    factorlist  go to state 79


State 74

   32 returnstmt: RETURN expr .

    $default  reduce using rule 32 (returnstmt)


State 75

   62 term: '(' expr . ')'

    ')'  shift, and go to state 118


State 76

   69 term: factor .
   77 pair: factor . ',' factor

    ','  shift, and go to state 119

    $default  reduce using rule 69 (term)


State 77

   68 term: '(' pair . ')'

    ')'  shift, and go to state 120


State 78

   69 term: factor .
   75 factorlist: factor .

    ','       reduce using rule 75 (factorlist)
    '}'       reduce using rule 75 (factorlist)
    $default  reduce using rule 69 (term)


State 79

   67 term: '{' factorlist . '}'
   74 factorlist: factorlist . ',' factor

    ','  shift, and go to state 121
    '}'  shift, and go to state 122


State 80

   70 factor: ID .

    $default  reduce using rule 70 (factor)


State 81

   63 term: '-' term .

    $default  reduce using rule 63 (term)


State 82

   64 term: '+' term .

    $default  reduce using rule 64 (term)


State 83

   65 term: '$' term .

    $default  reduce using rule 65 (term)


State 84

   66 term: '!' term .

    $default  reduce using rule 66 (term)


State 85

   37 attr: ID . '=' expr
   38 identlist: ID . ',' identlist
   39          | ID .

    ','  shift, and go to state 123
    '='  shift, and go to state 68

    $default  reduce using rule 39 (identlist)


State 86

   28 declaration: type attr .

    $default  reduce using rule 28 (declaration)


State 87

   27 declaration: type identlist .

    $default  reduce using rule 27 (declaration)


State 88

    7 compoundstmt: '{' stmtlist '}' .

    $default  reduce using rule 7 (compoundstmt)


State 89

   14 stmtlist: stmtlist stmt .

    $default  reduce using rule 14 (stmtlist)


State 90

   20 stmt: declaration ';' .

    $default  reduce using rule 20 (stmt)


State 91

   21 stmt: io ';' .

    $default  reduce using rule 21 (stmt)


State 92

   22 stmt: returnstmt ';' .

    $default  reduce using rule 22 (stmt)


State 93

   17 stmt: expr ';' .

    $default  reduce using rule 17 (stmt)


State 94

   42 compare: "==" .

    $default  reduce using rule 42 (compare)


State 95

   43 compare: "<" .

    $default  reduce using rule 43 (compare)


State 96

   44 compare: ">" .

    $default  reduce using rule 44 (compare)


State 97

   45 compare: "<=" .

    $default  reduce using rule 45 (compare)


State 98

   46 compare: ">=" .

    $default  reduce using rule 46 (compare)


State 99

   47 compare: "!=" .

    $default  reduce using rule 47 (compare)


State 100

   40 rvalue: rvalue compare . logicalor

    ID          shift, and go to state 80
    BOOL_VALUE  shift, and go to state 37
    NUM_VALUE   shift, and go to state 38
    CHAR_VALUE  shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 73
    '-'         shift, and go to state 42
    '+'         shift, and go to state 43
    '$'         shift, and go to state 44
    '!'         shift, and go to state 45

    logicalor       go to state 124
    logicaland      go to state 59
    pertinence      go to state 60
    cartesian       go to state 61
    addition        go to state 62
    multiplication  go to state 63
    term            go to state 64
    factor          go to state 65


State 101

   48 logicalor: logicaland OR . logicalor

    ID          shift, and go to state 80
    BOOL_VALUE  shift, and go to state 37
    NUM_VALUE   shift, and go to state 38
    CHAR_VALUE  shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 73
    '-'         shift, and go to state 42
    '+'         shift, and go to state 43
    '$'         shift, and go to state 44
    '!'         shift, and go to state 45

    logicalor       go to state 125
    logicaland      go to state 59
    pertinence      go to state 60
    cartesian       go to state 61
    addition        go to state 62
    multiplication  go to state 63
    term            go to state 64
    factor          go to state 65


State 102

   50 logicaland: pertinence "&&" . logicaland

    ID          shift, and go to state 80
    BOOL_VALUE  shift, and go to state 37
    NUM_VALUE   shift, and go to state 38
    CHAR_VALUE  shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 73
    '-'         shift, and go to state 42
    '+'         shift, and go to state 43
    '$'         shift, and go to state 44
    '!'         shift, and go to state 45

    logicaland      go to state 126
    pertinence      go to state 60
    cartesian       go to state 61
    addition        go to state 62
    multiplication  go to state 63
    term            go to state 64
    factor          go to state 65


State 103

   52 pertinence: pertinence "<?>" . cartesian

    ID          shift, and go to state 80
    BOOL_VALUE  shift, and go to state 37
    NUM_VALUE   shift, and go to state 38
    CHAR_VALUE  shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 73
    '-'         shift, and go to state 42
    '+'         shift, and go to state 43
    '$'         shift, and go to state 44
    '!'         shift, and go to state 45

    cartesian       go to state 127
    addition        go to state 62
    multiplication  go to state 63
    term            go to state 64
    factor          go to state 65


State 104

   54 cartesian: cartesian "<*>" . addition

    ID          shift, and go to state 80
    BOOL_VALUE  shift, and go to state 37
    NUM_VALUE   shift, and go to state 38
    CHAR_VALUE  shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 73
    '-'         shift, and go to state 42
    '+'         shift, and go to state 43
    '$'         shift, and go to state 44
    '!'         shift, and go to state 45

    addition        go to state 128
    multiplication  go to state 63
    term            go to state 64
    factor          go to state 65


State 105

   56 addition: addition "+" . multiplication

    ID          shift, and go to state 80
    BOOL_VALUE  shift, and go to state 37
    NUM_VALUE   shift, and go to state 38
    CHAR_VALUE  shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 73
    '-'         shift, and go to state 42
    '+'         shift, and go to state 43
    '$'         shift, and go to state 44
    '!'         shift, and go to state 45

    multiplication  go to state 129
    term            go to state 64
    factor          go to state 65


State 106

   57 addition: addition "-" . multiplication

    ID          shift, and go to state 80
    BOOL_VALUE  shift, and go to state 37
    NUM_VALUE   shift, and go to state 38
    CHAR_VALUE  shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 73
    '-'         shift, and go to state 42
    '+'         shift, and go to state 43
    '$'         shift, and go to state 44
    '!'         shift, and go to state 45

    multiplication  go to state 130
    term            go to state 64
    factor          go to state 65


State 107

   59 multiplication: multiplication "*" . term

    ID          shift, and go to state 80
    BOOL_VALUE  shift, and go to state 37
    NUM_VALUE   shift, and go to state 38
    CHAR_VALUE  shift, and go to state 39
    '('         shift, and go to state 40
    '{'         shift, and go to state 73
    '-'         shift, and go to state 42
    '+'         shift, and go to state 43
    '$'         shift, and go to state 44
    '!'         shift, and go to state 45

    term    go to state 131
    factor  go to state 65


State 108

   60 multiplication: multiplication "/" . term
